--- a/VUE模板页/src/public/css/common.css
+++ b/VUE模板页/src/public/css/common.css
@@ -23,3 +23,7 @@ table{ border-collapse: collapse; border-spacing: 0; }
 .fr{ float: right; }
 .clearfix:after{ content: ""; display: block; height: 0; clear: both; visibility: hidden; }
 .clearfix{ *zoom: 1; }
+
+.colSroll .el-scrollbar__wrap{
+  overflow-x:hidden !important;
+}
