--- a/VUE模板页/src/public/css/common.css
+++ b/VUE模板页/src/public/css/common.css
@@ -27,3 +27,6 @@ table{ border-collapse: collapse; border-spacing: 0; }
 .colSroll .el-scrollbar__wrap{
   overflow-x:hidden !important;
 }
+.el-menu--popup{
+  padding: 0 !important;
+}
