--- a/VUE模板页/src/public/css/common.css
+++ b/VUE模板页/src/public/css/common.css
@@ -2,7 +2,7 @@
 html{ overflow: auto; }
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td{ margin: 0; padding: 0; }
 div, p{ word-break: break-all; }
-body{ background: #f5f5f5; font-size: 14px; font-family: Microsoft YaHei, Arial, Helvetica; color: #333; /* -moz-user-select: none; user-select: none;  *//*overflow:hidden;*/ }
+body{ background: #f5f5f5; font-size: 14px; font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Arial,sans-serif; color: #333; /* -moz-user-select: none; user-select: none;  *//*overflow:hidden;*/ }
 h1, h2, h3, h4, h5, h6{ font-weight: normal; font-size: 100%; }
 address, caption, cite, code, dfn, em, strong, th, var{ font-style: normal; font-weight: normal; }
 a{ color: #555; text-decoration: none; cursor: pointer; }
@@ -35,5 +35,5 @@ table{ border-collapse: collapse; border-spacing: 0; }
 }
 .el-menu--collapse .el-submenu__title{
   padding: 0 !important;
-  padding-left: 10px !important;
+  padding-left: 13px !important;
 }
